--- a/RELEASE_NOTES.txt
+++ b/RELEASE_NOTES.txt
@@ -1,5 +1,7 @@
 ART 0.1-dev RELEASE NOTES
 
+ART webpage: http://bitbucket.org/agriggio/ART
+
 ART is a fork of a development version RawTherapee. The fork took place
 between versions 5.5 and 5.6. The following are the release notes for that
 version of RawTherapee.
