updated Dutch translation

--- a/AUTHORS.txt
+++ b/AUTHORS.txt
@@ -9,8 +9,8 @@ Other contributors (profiles, ideas, mockups, testing, forum activity, translati
 
   André Gauthier
   Sebastien Guyader
+  Paul Matthijsse
   Serge Moreau
-
 
 
 RawTherapee
